Add description and compnay number

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <title>Contents</title>
+    <meta
+      name="description"
+      content="Rising Sky is a web development studio specialising in e-learning and video production."
+    />
+    <title>Rising Sky: Web development studio</title>
 
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -35,7 +38,7 @@
       </div>
     </main>
     <footer>
-      <p>&copy; Rising Sky</p>
+      <p class="text-sm">&copy; Rising Sky. Company Number SC683321.</p>
     </footer>
 
     <!-- ians-container END -->
