--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
       />
     </header>
     <main>
-      <div class="rs-wrapper">
+      <div class="rs-wrapper relative">
         <div class="bg-gray-800 text-white p-4 md:p-12 rounded-2xl">
           <p>
             Rising Sky Limited is a web development studio based in Scotland.
@@ -35,6 +35,12 @@
             Management domains since 2001.
           </p>
         </div>
+        <img
+          loading="lazy"
+          class="rs-tape"
+          src="images/cassette-tape.png"
+          alt="Cassette tape"
+        />
       </div>
     </main>
     <footer>
