--- a/app/index.html
+++ b/app/index.html
@@ -35,12 +35,295 @@
             Management domains since 2001.
           </p>
         </div>
-        <img
+        <!-- <img
           loading="lazy"
           class="rs-tape"
-          src="images/cassette-tape.png"
+          src="images/cassette-tape.svg"
           alt="Cassette tape"
-        />
+        /> -->
+        <svg
+          class="rs-tape"
+          id="svg2"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 374.4 247.36"
+        >
+          <defs>
+            <style>
+              .cls-10,
+              .cls-11,
+              .cls-12,
+              .cls-5,
+              .cls-6,
+              .cls-7 {
+                stroke: #000;
+              }
+              .cls-10,
+              .cls-11,
+              .cls-5,
+              .cls-6,
+              .cls-7 {
+                stroke-linecap: round;
+                stroke-linejoin: bevel;
+              }
+              .cls-12 {
+                stroke-miterlimit: 4.27;
+                fill-rule: evenodd;
+              }
+              .cls-11,
+              .cls-6,
+              .cls-7 {
+                fill: #fff;
+              }
+              .cls-12 {
+                stroke-width: 1.07px;
+              }
+              .cls-10,
+              .cls-5 {
+                fill: #ccc;
+              }
+              .cls-5 {
+                stroke-width: 0.61px;
+              }
+              .cls-6 {
+                stroke-width: 0.81px;
+              }
+              .cls-7 {
+                stroke-width: 0.56px;
+              }
+              .cls-10 {
+                stroke-width: 0.89px;
+              }
+              .cls-11 {
+                stroke-width: 1.42px;
+              }
+
+              #hole1 {
+                transform-origin: 98.5px 110.5px;
+                animation: rotation 10s infinite linear;
+              }
+
+              #hole2 {
+                transform-origin: 276.2px 134.3px;
+                animation: rotation 10s infinite linear;
+              }
+
+              #emailtext {
+                transform: rotate(7.8deg);
+              }
+
+              @media (prefers-reduced-motion) {
+                #hole1,
+                #hole2 {
+                  animation: none;
+                }
+              }
+
+              @keyframes rotation {
+                from {
+                  transform: rotate(0deg);
+                }
+                to {
+                  transform: rotate(359deg);
+                }
+              }
+            </style>
+          </defs>
+          <rect
+            id="rect3338"
+            x="84.29"
+            y="-52.3"
+            width="205.83"
+            height="351.96"
+            rx="5.72"
+            transform="rotate(-82.93 187.204 123.683)"
+            stroke-width="1.1"
+            stroke-linecap="round"
+            stroke-linejoin="bevel"
+            stroke="#000"
+          />
+          <path
+            id="path3344"
+            d="M61.07 211.88l28.55-50.44 183 22.69L288 240z"
+            stroke-miterlimit="4.27"
+            fill-rule="evenodd"
+            fill="#333"
+            stroke-width=".89"
+            stroke="#000"
+          />
+          <path
+            id="rect3475"
+            d="M36 15.2l328.06 40.68s0 0 0 0l-21 137h0L15 152.28s0 0 0 0l21-137v-.08z"
+            stroke-width="1.11"
+            fill="#fff"
+            stroke-linecap="round"
+            stroke-linejoin="bevel"
+            stroke="#000"
+          />
+          <path
+            id="path3541"
+            d="M29.79 55.11l327.56 45.22-13.51 97.86L16.28 153z"
+            stroke-width="1.07"
+            fill="#d55239"
+            stroke-miterlimit="4.27"
+            fill-rule="evenodd"
+            stroke="#000"
+          />
+          <circle
+            id="path3528"
+            class="cls-5"
+            cx="176.55"
+            cy="192.22"
+            r="6.09"
+          />
+          <circle
+            id="circle3545"
+            class="cls-6"
+            cx="98.24"
+            cy="204.01"
+            r="8.13"
+            transform="rotate(-82.93 98.244 204.013)"
+          />
+          <circle
+            id="circle3547"
+            class="cls-6"
+            cx="252.79"
+            cy="223.17"
+            r="8.13"
+            transform="rotate(-82.93 252.794 223.177)"
+          />
+          <path
+            id="rect3549"
+            class="cls-7"
+            transform="rotate(-82.93 130.061 203.118)"
+            d="M124.47 197.53h11.17v11.17h-11.17z"
+          />
+          <path
+            id="rect3551"
+            class="cls-7"
+            transform="rotate(-82.93 223.216 214.674)"
+            d="M217.62 209.08h11.17v11.17h-11.17z"
+          />
+          <circle
+            id="circle3555"
+            class="cls-5"
+            cx="12.89"
+            cy="194.5"
+            r="6.09"
+          />
+          <circle
+            id="circle3557"
+            class="cls-5"
+            cx="336.81"
+            cy="234.67"
+            r="6.09"
+            transform="rotate(-82.93 336.818 234.666)"
+          />
+          <rect
+            id="rect3488"
+            x="151.91"
+            y="-5.19"
+            width="71.51"
+            height="255.4"
+            rx="30.65"
+            transform="rotate(-82.37 187.665 122.513)"
+            stroke-width="1.02"
+            stroke-linecap="round"
+            stroke-linejoin="bevel"
+            stroke="#000"
+          />
+          <path
+            id="rect3490"
+            stroke-width=".97"
+            fill="#fff"
+            stroke-linecap="round"
+            stroke-linejoin="bevel"
+            stroke="#000"
+            d="M143.555 120.752l3.94-29.417 87.132 11.672-3.94 29.417z"
+          />
+          <g id="hole1">
+            <circle
+              id="circle3496"
+              class="cls-10"
+              cx="98.59"
+              cy="110.58"
+              r="28.16"
+            />
+            <path
+              id="path3526"
+              class="cls-11"
+              d="M88.55 133.09c-.85-.42-1.07-1.91-.5-3.31.69-1.67 0-3.26-1.89-4.65-2.46-1.77-3.2-1.75-4.62.15-1.31 1.73-1.9 1.81-2.57.3-.48-1.07 0-3 1-4.22 2.23-2.69.1-7.33-3-6.58a2.21 2.21 0 01-2.47-1.85c-.38-1.61.3-2.2 2.23-1.94s2.9-.59 3.24-3.15-.28-3.63-2.3-3.9-2.42-1-1.66-2.41a2.51 2.51 0 013.43-1c3.27 1.54 7.36-4.8 4.21-6.51-1.59-.87-1.68-1.53-.35-2.55s2.28-.85 3.65.64 2.63 1.71 5 .83c2.54-1 2.92-1.73 2-4.13s-.65-2.9 1.76-2.57c1.61.21 2.74 1.31 2.58 2.5s1 2.29 3.24 2.58 3.63-.32 3.83-1.76c.16-1.23 1.05-1.86 2-1.4a3.19 3.19 0 011.39 3.12c-.51 4 2.37 6.52 5.74 5 2.1-.95 3.16-.86 3.69.33a2.12 2.12 0 01-1.36 2.61c-3 1.37-.49 6.31 3.41 6.69 1.65.15 2.89 1.13 2.75 2.16a2 2 0 01-2.36 1.59q-2.11-.28-2.69 3.94c-.37 2.78.15 4.33 1.51 4.51a1.32 1.32 0 011.06 2.13 2.8 2.8 0 01-3.52.84c-3-1.25-5.88 3.7-3.91 6.84 1 1.57.77 2.22-.86 2.6a2 2 0 01-2.5-1.22c-.25-1.33-1.32-1.44-4.47-.49-3.43 1-3.9 1.66-2.7 3.57s1 2.25-.69 2a3.47 3.47 0 01-2.67-2.51c-.77-3.25-7.28-3.74-8.26-.61-.44 1.4-1.49 2.19-2.34 1.77z"
+            />
+          </g>
+          <path
+            id="path4085"
+            class="cls-12"
+            d="M32.91 36.3l24.45-18.47-31.76-3.94-4.91 31.64z"
+          />
+          <path
+            id="path4087"
+            class="cls-12"
+            d="M357.58 76.56l-17.9-23.72 31.76 3.94-4.91 31.63z"
+          />
+          <circle
+            id="circle3573"
+            class="cls-5"
+            cx="359.52"
+            cy="51.54"
+            r="6.09"
+            transform="rotate(-82.93 359.523 51.534)"
+          />
+          <g id="hole2">
+            <circle
+              id="circle4053"
+              class="cls-10"
+              cx="276.21"
+              cy="134.32"
+              r="28.16"
+              transform="rotate(-82.37 276.202 134.329)"
+            />
+            <path
+              id="path4083"
+              class="cls-11"
+              d="M266.17 156.84c-.85-.43-1.07-1.91-.5-3.31.69-1.68 0-3.26-1.89-4.65-2.46-1.78-3.2-1.75-4.63.14-1.3 1.74-1.89 1.81-2.56.31a4.62 4.62 0 011-4.22c2.23-2.7.1-7.33-3-6.59a2.2 2.2 0 01-2.47-1.85c-.38-1.61.3-2.19 2.23-1.93s2.9-.59 3.24-3.16-.28-3.62-2.3-3.89-2.42-1-1.66-2.42a2.52 2.52 0 013.43-1c3.27 1.54 7.36-4.8 4.21-6.52-1.59-.87-1.68-1.53-.35-2.54s2.28-.86 3.65.63 2.63 1.72 5 .84c2.54-1 2.92-1.74 2-4.14s-.65-2.89 1.76-2.57c1.61.22 2.74 1.31 2.58 2.5s1.05 2.29 3.24 2.59 3.63-.32 3.83-1.76c.16-1.23 1-1.86 2-1.41a3.2 3.2 0 011.39 3.12c-.51 4 2.37 6.53 5.74 5 2.1-1 3.16-.85 3.69.33a2.13 2.13 0 01-1.36 2.62c-3 1.36-.49 6.31 3.41 6.68 1.65.16 2.89 1.13 2.75 2.16a2 2 0 01-2.36 1.59q-2.11-.28-2.69 3.95c-.37 2.78.15 4.32 1.51 4.5a1.33 1.33 0 011.06 2.14 2.81 2.81 0 01-3.52.83c-3.05-1.25-5.88 3.7-3.91 6.84 1 1.57.77 2.22-.86 2.61a2 2 0 01-2.5-1.23c-.25-1.32-1.32-1.44-4.47-.48-3.43 1-3.9 1.66-2.7 3.56s1 2.26-.69 2a3.5 3.5 0 01-2.67-2.51c-.77-3.26-7.28-3.74-8.26-.61-.44 1.39-1.49 2.19-2.34 1.77z"
+            />
+          </g>
+          <circle id="circle3571" class="cls-5" cx="35.6" cy="11.37" r="6.09" />
+          <g id="g5051">
+            <g id="text5043">
+              <path
+                id="path3425"
+                d="M320.23 134.39q1.22-9.1 7.38-8.28a7.7 7.7 0 01.86.17 5.84 5.84 0 011.09.43 4.3 4.3 0 011.19.81 3.87 3.87 0 01.89 1.36 5.09 5.09 0 01.42 2l-3.05-.41a2.55 2.55 0 00-.65-1.23 2 2 0 00-1.2-.52 2.6 2.6 0 00-1.44.17 2 2 0 00-1 .94 7.47 7.47 0 00-.6 1.46 18.59 18.59 0 00-.43 1.92 5 5 0 011.68-.92 4.11 4.11 0 011.84-.11 4.47 4.47 0 013.27 2 5.62 5.62 0 01.85 4.08 6.37 6.37 0 01-2.15 4.22 5.22 5.22 0 01-4.25 1.15 6.2 6.2 0 01-2.18-.67 5.34 5.34 0 01-1.69-1.52 6.3 6.3 0 01-1-2.79 16.87 16.87 0 01.1-4.27zm7.59 1.38a2.45 2.45 0 00-3.69-.45 3.41 3.41 0 00-1 2.14 3.22 3.22 0 00.42 2.25 2.27 2.27 0 001.72 1.1 2.22 2.22 0 001.92-.63 3.32 3.32 0 001-2.11 3.4 3.4 0 00-.39-2.3z"
+              />
+              <path
+                id="path3427"
+                d="M340.76 145.09a6.41 6.41 0 01-5.64-.76 4.64 4.64 0 01-1.53-2.17 10 10 0 01-.51-2.84 21 21 0 01.21-3.49 13.45 13.45 0 012.16-6.34 4.73 4.73 0 014.76-1.69 5.58 5.58 0 012.68 1 4.18 4.18 0 011.54 2.07 9.4 9.4 0 01.53 2.9 20.5 20.5 0 01-.21 3.68 19.77 19.77 0 01-.71 3.33 10.43 10.43 0 01-1.23 2.61 4.44 4.44 0 01-2.05 1.69zm.71-8.14a12.51 12.51 0 000-4.86 2 2 0 00-1.62-1.63 1.93 1.93 0 00-2.06 1.09 13.59 13.59 0 00-1.21 4.7 17.8 17.8 0 00-.19 3.8 3.49 3.49 0 00.56 1.89 2.07 2.07 0 001.28.61 2 2 0 001.35-.25 3.34 3.34 0 001.06-1.66 16.77 16.77 0 00.83-3.69z"
+              />
+            </g>
+            <g id="text5047">
+              <path
+                id="path3430"
+                d="M322.31 155.09l-1.25-.17-1.6-8.16-1 7.8-1.12-.15 1.25-9.31 1.64.22 1.68 8.48 3.79-7.74 1.65.22-1.25 9.31-1.12-.15 1-7.81-3.66 7.46z"
+              />
+              <path
+                id="path3432"
+                d="M330.79 146.75l-1.25 9.3-1.2-.16 1.25-9.3z"
+              />
+              <path
+                id="path3434"
+                d="M340.16 148l-1.25 9.31-1.34-.18-3.8-8.19-1 7.54-1.12-.15 1.25-9.3 1.29.17 3.84 8.26 1-7.61z"
+              />
+              <path
+                id="path3436"
+                d="M342.46 156.43l-.17 1.33-1.33-.18.18-1.32 1.32.17z"
+              />
+            </g>
+          </g>
+          <a id="emailtext" xlink:href="mailto:websemantic@yahoo.co.uk">
+            <text font-size="16" font-weight="bold" fill="#374160">
+              <tspan x="80" y="35">email: websemantic@yahoo.co.uk</tspan>
+            </text>
+          </a>
+        </svg>
       </div>
     </main>
     <footer>
