Changed intro text

--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
             Rising Sky Limited is a web development studio based in Scotland.
           </p>
           <p>
-            The lead developer is Patrick Grey. Patrick has been developing
-            e-learning content and applications for the Air Traffic and Network
-            Management domains since 2001.
+            Patrick Grey is the company owner and lead developer. Patrick has
+            been developing e-learning content and applications for the Air
+            Traffic and Network Management domains since 2001.
           </p>
         </div>
         <!-- <img
