Tender page creted

--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en-gb" class="no-js">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Rising Sky is a web development studio specialising in e-learning and video production."
+      content="Rising Sky is a web development studio in Lochgilphead specialising in e-learning and video production."
     />
     <title>Rising Sky: Web development studio</title>
-
+    <script>
+      document.documentElement.classList.remove("no-js");
+    </script>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
 
   <body class="antialiased w-full text-gray-700 text-2xl">
     <header>
       <h1 class="sr-only">Rising Sky</h1>
-      <p class="sr-only">Web development studio</p>
+      <p class="sr-only">Web development studio in Lochgilphead</p>
       <img
         class="pt-4 pb-12 max-w-md"
         src="images/rising-sky-logo.svg"
