Removed css from gitignore

--- a/app/tender/index.html
+++ b/app/tender/index.html
@@ -99,7 +99,7 @@
     </footer>
 
     <!-- ians-container END -->
-    <!-- <script src="scripts/main.js" charset="UTF-8"></script> -->
+    <script src="scripts/main.js" charset="UTF-8"></script>
     <!-- <script
       src="https://trainingzone.h5p.com/js/h5p-resizer.js"
       charset="UTF-8"
