Fixed css now for js 7

--- a/app/tender/index.html
+++ b/app/tender/index.html
@@ -72,24 +72,38 @@
       </div>
       <div class="rs-wrapper">
         <p class="text-xs text-gray-500 text-center">
-          <a href="https://www.flickr.com/photos/54238124@N00/36360217110"
+          <a
+            href="https://www.flickr.com/photos/54238124@N00/36360217110"
+            target="_blank"
+            rel="noopener noreferrer"
             >"An Old Computer In The Design Museum - London."</a
           >
           by
-          <a href="https://www.flickr.com/photos/54238124@N00">Jim Linwood</a>
+          <a
+            href="https://www.flickr.com/photos/54238124@N00"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Jim Linwood</a
+          >
           is licensed under
           <a
             href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html"
+            target="_blank"
+            rel="noopener noreferrer"
             >CC BY 2.0</a
           >
         </p>
 
         <h2>Example pages</h2>
         <p>
-          <a href="tem/">Threat and Error Management [ATC-R-TEM]: Page 6</a>
+          <a href="tem/" target="_blank"
+            >Threat and Error Management [ATC-R-TEM]: Page 6</a
+          >
         </p>
-        <p><a href="_style-guide/">Proposed Style Guide</a></p>
-        <p><a href="demo-page-pg/">Converted existing page</a></p>
+        <p><a href="_style-guide/" target="_blank">Proposed Style Guide</a></p>
+        <p>
+          <a href="demo-page-pg/" target="_blank">Converted existing page</a>
+        </p>
       </div>
     </main>
     <footer>
