Updated front page text

--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,12 @@
             Rising Sky Limited is a web development studio based in Scotland.
           </p>
           <p>
-            Patrick Grey is the company owner and lead developer. Patrick has
-            been developing e-learning content and applications for the Air
-            Traffic and Network Management domains since 2001.
+            We specialise in e&#8209;learning content, web applications and
+            motion graphic videos.
+          </p>
+          <p>
+            Patrick Grey is the lead developer and has been hacking away on the
+            web since 2001.
           </p>
         </div>
         <!-- <img
