--- a/app/tender/index.html
+++ b/app/tender/index.html
@@ -61,7 +61,7 @@
             <div class="rs-video-16/9">
               <iframe
                 class="rounded-xl"
-                src="https://www.youtube.com/embed/5OQl4WTkWTc?rel=0&showinfo=0"
+                src="https://www.youtube.com/embed/JKw_Ayt73Ao?rel=0&showinfo=0"
                 frameborder="0"
                 allowfullscreen
                 title="Rising Sky Limited Showreel"
