Tender pages improved

--- a/app/tender/index.html
+++ b/app/tender/index.html
@@ -37,6 +37,10 @@
           <p class="text-center"><strong>20-130512-A</strong></p>
         </div>
         <h2>Showreel</h2>
+        <p>
+          This showreel contains clips from videos I've had a load of fun making
+          over the last five years.
+        </p>
       </div>
       <div class="rs-wrapper-wide">
         <div class="rst-grid-video">
@@ -94,16 +98,41 @@
           >
         </p>
 
-        <h2>Example pages</h2>
-        <p>
-          <a href="tem/" target="_blank"
-            >Threat and Error Management [ATC-R-TEM]: Page 6</a
-          >
-        </p>
-        <p><a href="_style-guide/" target="_blank">Proposed Style Guide</a></p>
-        <p>
-          <a href="demo-page-pg/" target="_blank">Converted existing page</a>
-        </p>
+        <div class="rs-example-pages">
+          <h2>Example pages</h2>
+          <div class="bg-gray-50 rounded-2xl p-6 mb-6 rs-star-bg">
+            <a class="rs-example-link underline" href="tem/" target="_blank"
+              >Threat and Error Management<br />[ATC-R-TEM]: Page 6</a
+            >
+            <p class="ml-4">
+              This is a quick development version of the storyboard in the
+              tender to demonstrate how text may translate to online content.
+            </p>
+          </div>
+          <div class="bg-gray-50 rounded-2xl p-6 mb-6 rs-star-bg">
+            <a
+              class="rs-example-link underline"
+              href="_style-guide/"
+              target="_blank"
+              >Proposed Style Guide</a
+            >
+            <p class="ml-4">A simplified but more flexible style guide.</p>
+          </div>
+          <div class="bg-gray-50 rounded-2xl p-6 mb-6 rs-star-bg">
+            <a
+              class="rs-example-link underline"
+              href="demo-page-pg/"
+              target="_blank"
+              >Converted existing page</a
+            >
+            <p class="ml-4">
+              This page is a redevelopment of an existing page from the
+              GEN-UAS-OPEN-A1+A3 course. It was done to show an improvement in
+              development speed and better formatting to allow more information
+              on screen at a time.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
