Header added to demo page

--- a/app/tender/demo-page-pg/index.html
+++ b/app/tender/demo-page-pg/index.html
@@ -12,7 +12,8 @@
 
   <body>
     <div class="ians-wrapper-footer-at-bottom">
-      <header class="ians-wrapper">
+      <div class="tem-dummy-back"><strong>&lt;&lt; Back</strong></div>
+      <header class="ians-wrapper tem-dummy-back-header">
         <div class="ians-breadcrumb">Air Safety is important</div>
         <h1>UAS – is my drone ready to fly?</h1>
       </header>
