--- a/app/tender/index.html
+++ b/app/tender/index.html
@@ -37,7 +37,7 @@
           <p class="text-center"><strong>20-130512-A</strong></p>
         </div>
         <h2>Showreel</h2>
-        <p>
+        <p class="mb-10">
           This showreel contains clips from videos I've had a load of fun making
           over the last five years.
         </p>
