--- a/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
+++ b/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
@@ -55,7 +55,85 @@
 
 <p>Updated: Last Modified.</p>
 
-<p>Hi</p>
+<p>It's mid November 2023 and it's cold, crisp and sunny in <a href="#">Argyll today</a>. I'm lucky enough to
+    have a few weeks
+    off. I've tidied
+    <a href="#">my office</a>, fed the fish and changed my <a href="#">computer setup</a>. Time to take time to
+    learn new things. 
+</p>
+
+<h2>New website</h2>
+
+<p>I've had a holding page for my business for three years now so it's time to put that site to proper use. I'll
+    publish and own my own content (link)</p>
+
+<p>I also want to finally create my businesses website to replace the current holding page [screenshot here] -
+    [versions by sub domain - no index?] (now three years old). I have a vague idea what I want
+    it to contain:</p>
+
+<aside>You can view previous versions of this site here.</aside>
+
+<p>These are the types of content I want to publish:</p>
+
+<!-- DT list? -->
+
+<ul>
+  <li>Home page with latest content listed</li>
+  <li>Long bits</li>
+  <li>Short bits</li>
+  <li>Photos</li>
+  <li>Music</li>
+  <li>Reading lists</li>
+  <li>Footer content:</li>
+  <ul>
+    <li>Following on Soc Media</li>
+    <li>Bookmarks on Soc Media (open and read)</li>
+    <li>Uses</li>
+    <li>Cocktail list - uncivilised.</li>
+    <!-- Espresso martini, French 75, Margarita, Martini, Dark & stormy, Old fashioned -->
+  </ul>
+</ul>
+
+<p>I want as simple and robust an editing and publishing worflow as possible. Don't like MD. Want to be able to
+    edit on mobile. Rejecting CMS.</p>
+
+<p>Website features (this list will grow)</p>
+
+<ol>
+<li>11ty setup</li>
+<ol>
+  <li>
+    <s>for local CSS, IMG and JS with access to Node if needed</s>.</li>
+  <li>
+    <s>CSS will be vanilla</s>. </li>
+  <li>Img will use 11ty plugin.</li>
+  <li>Having read more, will start off with no node modules then look at import maps.</li>
+  <li>
+    <s>Navigation</s>
+  </li>
+  <li>Drafts</li>
+  <li>Sitemap</li>
+  <li>RSS</li>
+  <li>Robots txt: Stop AI scraping</li>
+  
+  <li>Header block</li>
+  <li>taGS</li>
+  <li>Code syntax styling</li>
+  <li>Logo and Favicon</li>
+  <li>Local fonts</li>
+</ol>
+<li>Create some content first, home page, first 'long bit'</li>
+<li>Document Accessibility test with NVDA</li>
+<ol>
+  <li>Research setting up my own accessibility audit.</li>
+</ol>
+<li>Add CSS as learn and document</li>
+<li>Web mentions</li>
+</ol>
+
+<!-- Could these sections be their own posts? Yes! -->
+
+<!-- Living documents? Updated resources and summaries? Or separate posts? -->
 
 <img src="./images/patrick-grey-mountain.jpg" alt="Me up a mountain">
 
