Fixed image insert

--- a/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
+++ b/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
@@ -157,7 +157,7 @@
 
 <!-- Living documents? Updated resources and summaries? Or separate posts? -->
 
-<picture><source type="image/avif" srcset="/img/GavwzdVIHU-1596.avif 1596w"><source type="image/webp" srcset="/img/GavwzdVIHU-1596.webp 1596w"><img class="rs-image" alt="Me up a mountain" loading="lazy" decoding="async" src="/img/GavwzdVIHU-1596.jpeg" width="1596" height="1384"></picture>
+<picture><source type="image/avif" srcset="images/GavwzdVIHU-1596.avif 1596w"><source type="image/webp" srcset="images/GavwzdVIHU-1596.webp 1596w"><img class="rs-image" alt="Me up a mountain" loading="lazy" decoding="async" src="images/GavwzdVIHU-1596.jpeg" width="1596" height="1384"></picture>
 
 
 
