Fixed footer nav URL

--- a/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
+++ b/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
@@ -165,7 +165,14 @@
 
         <footer>
             <p>&copy; Rising Sky Ltd. 2024</p>
-            <a href="reading-list/">Reading list</a>
+
+            <ul>
+                
+                    <li>
+                        <a href="/reading-list">Reading list</a>
+                    </li>
+                
+            </ul>
         </footer>
 
     </body>
