--- a/website-build/index.html
+++ b/website-build/index.html
@@ -130,7 +130,14 @@
 
         <footer>
             <p>&copy; Rising Sky Ltd. 2024</p>
-            <a href="reading-list/">Reading list</a>
+
+            <ul>
+                
+                    <li>
+                        <a href="/reading-list">Reading list</a>
+                    </li>
+                
+            </ul>
         </footer>
 
     </body>
