Starting photos page

--- a/website-build/small/2023-11-21-remove-page-tag-collection/index.html
+++ b/website-build/small/2023-11-21-remove-page-tag-collection/index.html
@@ -141,6 +141,14 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
+
+            .token.constant,
+            .token.deleted,
+            .token.property,
+            .token.symbol,
+            .token.tag {
+                color: hotpink !important;
+            }
         </style>
 
         
@@ -220,6 +228,7 @@ pre[class*="language-"] {
         </main>
 
         <footer>
+            <p>🎶 This is the end...🎶</p>
             <p>&copy; Rising Sky Ltd. 2024</p>
 
             <ul>
