--- a/website-build/reading-list/index.html
+++ b/website-build/reading-list/index.html
@@ -139,6 +139,14 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
+
+            .token.constant,
+            .token.deleted,
+            .token.property,
+            .token.symbol,
+            .token.tag {
+                color: hotpink !important;
+            }
         </style>
 
         
@@ -207,6 +215,7 @@ pre[class*="language-"] {
         </main>
 
         <footer>
+            <p>🎶 This is the end...🎶</p>
             <p>&copy; Rising Sky Ltd. 2024</p>
 
             <ul>
