--- a/website-build/small/2023-11-21-11ty-highlight-top-level-nav/index.html
+++ b/website-build/small/2023-11-21-11ty-highlight-top-level-nav/index.html
@@ -139,6 +139,14 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
+
+            .token.constant,
+            .token.deleted,
+            .token.property,
+            .token.symbol,
+            .token.tag {
+                color: hotpink !important;
+            }
         </style>
 
         
@@ -210,6 +218,7 @@ pre[class*="language-"] {
         </main>
 
         <footer>
+            <p>🎶 This is the end...🎶</p>
             <p>&copy; Rising Sky Ltd. 2024</p>
 
             <ul>
