--- a/website-build/small/2023-11-23-i-was-nesting-lists-wrong/index.html
+++ b/website-build/small/2023-11-23-i-was-nesting-lists-wrong/index.html
@@ -331,7 +331,7 @@ pre[class*="language-"] {
             <div>
                 <p>🎶 This is the end...🎶</p>
                 <p>&copy; Rising Sky Ltd. 2024</p>
-                <p>Company number: </p>
+                <p>Company number: SC683321</p>
     
                 <ul>
                     
