--- a/website-build/small/2024-01-07-transition-stops/index.html
+++ b/website-build/small/2024-01-07-transition-stops/index.html
@@ -305,7 +305,7 @@ Credit: https: //stackoverflow.com/questions/26675099/on-hover-change-svg-from-c
             <div>
                 <p>🎶 This is the end...🎶</p>
                 <p>&copy; Rising Sky Ltd. 2024</p>
-                <p>Company number: </p>
+                <p>Company number: SC683321</p>
     
                 <ul>
                     
