--- a/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
+++ b/website-build/article/2023-11-20-rising-sky-website-version-2/index.html
@@ -438,7 +438,7 @@ pre[class*="language-"] {
             <div>
                 <p>🎶 This is the end...🎶</p>
                 <p>&copy; Rising Sky Ltd. 2024</p>
-                <p>Company number: </p>
+                <p>Company number: SC683321</p>
     
                 <ul>
                     
