Footer nav done

--- a/website-build/small/2023-11-21-11ty-highlight-top-level-nav/index.html
+++ b/website-build/small/2023-11-21-11ty-highlight-top-level-nav/index.html
@@ -297,7 +297,7 @@ pre[class*="language-"] {
 
             <div>
                 <nav>
-                    <ul>
+                    <ul class="rs-switcher rs-nav-sub">
                         
                             <li>
                                 <a href="/reading-list">Reading list</a>
@@ -314,7 +314,7 @@ pre[class*="language-"] {
                     </ul>
                 </nav>
                 
-                <div class="rs-switcher rs-tac">
+                <div class="rs-tac">
                     <p>Company number: SC683321</p>
                     <p>&copy; Rising Sky Ltd. 2024</p>
                 </div>
