--- a/website-build/small/2024-01-07-transition-stops/index.html
+++ b/website-build/small/2024-01-07-transition-stops/index.html
@@ -293,7 +293,7 @@ Credit: https: //stackoverflow.com/questions/26675099/on-hover-change-svg-from-c
 
             <div>
                 <nav>
-                    <ul>
+                    <ul class="rs-switcher rs-nav-sub">
                         
                             <li>
                                 <a href="/reading-list">Reading list</a>
@@ -310,7 +310,7 @@ Credit: https: //stackoverflow.com/questions/26675099/on-hover-change-svg-from-c
                     </ul>
                 </nav>
                 
-                <div class="rs-switcher rs-tac">
+                <div class="rs-tac">
                     <p>Company number: SC683321</p>
                     <p>&copy; Rising Sky Ltd. 2024</p>
                 </div>
