--- a/website-build/code/index.html
+++ b/website-build/code/index.html
@@ -292,7 +292,7 @@ pre[class*="language-"] {
 
             <div>
                 <nav>
-                    <ul>
+                    <ul class="rs-switcher rs-nav-sub">
                         
                             <li>
                                 <a href="/reading-list">Reading list</a>
@@ -309,7 +309,7 @@ pre[class*="language-"] {
                     </ul>
                 </nav>
                 
-                <div class="rs-switcher rs-tac">
+                <div class="rs-tac">
                     <p>Company number: SC683321</p>
                     <p>&copy; Rising Sky Ltd. 2024</p>
                 </div>
